--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
                 <div class="mini-intro">
                     Let we help you to take a 360-degree tour of some of the country's most compelling<br/> natural wonders and cultural attractions right here.
                 </div>
-                <a class="book-button" href="#">Book Now</a>
+                <a class="book-button white-button" href="#">Book Now</a>
             </div>
         </div>
 
@@ -1133,11 +1133,145 @@
                     Whatever Your Passion, You'll Find it in Ann Arbor. Get Your Travel Guide Here!
                 </div>
             </div>
-            <div class="travel-post">
-                <div class="travel-post__highlight"></div>
+            <div class="travel-post container">
+                <div class="travel-post__highlight row">
+                    <div class="travel-post__image col-md-6">
+                        <img class="w-100" src="images/app/post1.png">
+                    </div>
+                    <div class="travel-post__text col-md-6">
+                        <h5>Guideline to get Vietnam E-visa</h5>
+                        <div class="content">
+                            Vietnam E-visa is one of visa types issued to foreigners by Vietnamese Immigration Department visa electronic system. It is quite easy to obtain with some steps and people can do it personally at home. Just spend 15 minutes in front of your computer and you get the Vietnam E-visa application done. But before that, it is recommended to read the below article thoroughly to know step by step guide to get Vietnam E-visa.
+                        </div>
+                        <div class="view-more">
+                            <a href="#">View Detail → </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="travel-post row">
+                    <div class="col-md-3">
+                        <img class="w-100" src="images/app/post2.png">
+                        <div class="travel-post__text">
+                            <h5>Guideline to get Vietnam E-visa</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img class="w-100" src="images/app/post2.png">
+                        <div class="travel-post__text">
+                            <h5>Guideline to get Vietnam E-visa</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img class="w-100" src="images/app/post2.png">
+                        <div class="travel-post__text">
+                            <h5>Guideline to get Vietnam E-visa</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img class="w-100" src="images/app/post2.png">
+                        <div class="travel-post__text">
+                            <h5>Guideline to get Vietnam E-visa</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="explore text-center">
+                <a href="">Explore Now</a>
             </div>
         </div>
 
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-xs-12">
+                        <div class="footer-logo">
+                            <img src="images/app/logo.svg">
+                        </div>
+                        <p class="footer-welcome">
+                            Welcome to the official website of Heritage Vietnam Travel. Visit our social media pages for more travel inspiration.
+                        </p>
+                        <div class="sns">
+                            <div class="sns-icon">
+                                <img src="images/app/icon/ic_tripadvisor.svg">
+                            </div>
+                            <div class="sns-icon">
+                                <img src="images/app/icon/ic_facebook.svg">
+                            </div>
+                            <div class="sns-icon">
+                                <img src="images/app/icon/ic_youtube.svg">
+                            </div>
+                            <div class="sns-icon">
+                                <img src="images/app/icon/ic_instagram.svg">
+                            </div>
+                            <div class="sns-icon">
+                                <img src="images/app/icon/ic_twitter.svg">
+                            </div>
+                        </div>
+                        <div class="term">
+                            <a href="">Privacy Policy</a>
+                            <a href="">Terms & Conditions</a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-xs-12 text-white">
+                        <div class="footer-title">
+                            Contact us
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">Address</div>
+                            <div class="col-md-9">
+                                18 Floor, Keangnam Landmark 72
+                                Pham Hung, My Dinh, Hanoi, Vietnam
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">Tel:</div>
+                            <div class="col-md-9">
+                                091 234 5678
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">Email:</div>
+                            <div class="col-md-9">
+                                <a class="link" href="">heritage.vietnamtravel@gmail.com</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">Website:</div>
+                            <div class="col-md-9">
+                                <a class="link" href="">http://heritagevietnamtravel.com</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-xs-12 text-white">
+                        <div class="footer-title">
+                            Sign Up For Our Newsletter
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                Receive new travel stories from Vietnam once a month in your inbox.
+                            </div>
+                        </div>
+                        <div class="row footer-form">
+                            <div class="col-md-12">
+                                <div class="footer-form">
+                                    <input type="" name="" placeholder="Email">
+                                    <button class="golden-gradient-button">Sign Up</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="copyright">
+                            Copyright © 2021 Heritage Vietnam Travel. All rights reserved
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 <style type="text/css">
